hphp/hack/test/typecheck/match_statement/bad/wildcard_pattern_invalid_name.php
<?hh

<<file:__EnableUnstableFeatures('match_statements')>>

function f(arraykey $v): void {
  match ($v) {
    unused => echo "arraykey $v\n";
  }
}
